Featured talks for:
Amie Kreppel,
Michelle Brownstein,
Simone Seely,
Sebastian Ellios and
Angela Pang.

Opie logo initial checkin.
Minro tweaks.

--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -136,7 +136,7 @@
         <div class="row">
           <ul class="column">
             <li>
-              <b>Does BarCamp have something to do with bars or camping?</b>
+              <h3>Does BarCamp have something to do with bars or camping?</h3>
               <p>
                 Nope, it doesn't. The "BarCamp" name arose as an open to the
                 public alternative to Foo Camp, which is an invitation-only conference.
@@ -144,14 +144,14 @@
               </p>
             </li>
             <li>
-              <b>What is the cost to attend?</b>
+              <h3>What is the cost to attend?</h3>
               <p>
                 Nothing! BarCamp is completely free and open to the public.
                 Invite all your friends and share the experience with them!
               </p>
             </li>
             <li>
-              <b>What will the session topics be?</b>
+              <h3>What will the session topics be?</h3>
               <p>
                 The majority of sessions are not prearranged.
                 Attendees propose their own session ideas on the day of the event,
@@ -163,14 +163,14 @@
               </p>
             </li>
             <li>
-              <b>How long are the talks?</b>
+              <h3>How long are the talks?</h3>
               <p>
                 The schedule allots 30 minutes for each session but you
                 should leave some room for Q&A afterwards and travel time between sessions.
               </p>
             </li>
             <li>
-              <b>Do I have to give a talk?</b>
+              <h3>Do I have to give a talk?</h3>
               <p>
                 Absolutely not! Many people come to BarCamp just to meet new people
                 and listen to other folks give presentations, and that's great!
@@ -181,7 +181,7 @@
           </ul>
           <ul class="column">
             <li>
-              <b>What should I bring?</b>
+              <h3>What should I bring?</h3>
               <p>
                 BarCamp attendees don’t need to bring anything more but themselves and
                 a thirst for knowledge, but here are a few suggestions:
@@ -193,20 +193,20 @@
               </p>
             </li>
             <li>
-              <b>Will internet be provided?</b>
+              <h3>Will internet be provided?</h3>
               <p>
                 Sorry, no internet will be provided so prepare any materials you need ahead of time.
               </p>
             </li>
             <li>
-              <b>Can I give a sales presentation?</b>
+              <h3>Can I give a sales presentation?</h3>
               <p>
                 Nope. To be respectful of our BarCamp attendees, sales presentations, or all-out sales
                 pitches are not allowed. Don’t even try it, folks.
               </p>
             </li>
             <li>
-              <b>What if people walk out during a talk?</b>
+              <h3>What if people walk out during a talk?</h3>
               <p>
                 If a talk or discussion in one room isn’t of interest to you,
                 feel free to walk out and join another session.
@@ -214,13 +214,13 @@
               </p>
             </li>
             <li>
-              <b>Will food and drinks be provided?</b>
+              <h3>Will food and drinks be provided?</h3>
               <p>
                 Yes, food will be provided. A light breakfast and lunch.
               </p>
             </li>
             <li>
-              <b>You didn't answer my question!</b>
+              <h3>You didn't answer my question!</h3>
               <p>
                 If you have any other questions or concerns, please feel free to contact us
                 and we will do our best to get back to you as soon as possible.
@@ -255,7 +255,7 @@
         <section class="photo-themes">
           <ul class="row">
             <li class="column">
-              <b>Entrepreneur</b>
+              <i>Entrepreneur</i>
               <p>
                 This is a great track to talk about staying scrappy,
                 your setbacks, or successes — tell us about your journey
@@ -263,21 +263,21 @@
               </p>
             </li>
             <li class="column">
-              <b>Creative</b>
+              <i>Creative</i>
               <p>
                 Pushing film beyond its limit's, Sketch pro tips,
                 building strong brands. This is the track for you to share your creative ideas.
               </p>
             </li>
             <li class="column">
-              <b>Technology</b>
+              <i>Technology</i>
               <p>
                 Expanding Your Command Line Toolbox, The Physical Web, IoT.
                 Use this track to talk about the hardware and software that you love to geek out with.
               </p>
             </li>
             <li class="column">
-              <b>Kitchen Sink</b>
+              <i>Kitchen Sink</i>
               <p>
                 La vie sous vide, BBQ competitions, Upcycled Percussion.
                 This track is for all those passions that don't quite fit...the other tracks.
@@ -405,10 +405,161 @@
         </table>
       </div>
       <div class="our-sessions">
-        <h2>Session</h2>
-        <p>
-          Featured sessions coming soon.
-        </p>
+				<h2>Session</h2>
+				<p>
+					Check out our featured sessions, and draw inspiration 
+					for your own talk! Remember, sessions aren't limited to just "talks," 
+					it can be a presentation, panel, or discussion group.
+				</p>
+				<div class="row">
+					<!-- Left -->
+					<div class="column">
+						<div class="session session--michelle-brownstein">
+							<div class="session_vr">
+								<div class="photo-themes">
+									<span class="teen-party"></span>
+									<span class="cotton-candy"></span>
+									<span class="sunset"></span>
+									<span class="mist"></span>
+								</div>
+							</div>
+							<section class="session_content">
+								<i>Creative</i>
+								<h4>
+									<small>Michelle Brownstein</small>
+									You Are Not Your User: The Power of UX Research
+								</h4>
+								<p>
+									During the design and development process, 
+									it can be easy to get lost in business requirements 
+									and forget you are not the target user group. 
+									We’ll explore how to bring UXR to your processes to 
+									better understand the target user group and build 
+									the best possible product for your audience.
+								</p>
+								<a href="https://twitter.com/mbrownstein" target="_blank">@mbrownstein</a>
+							</section>
+						</div> 
+						<div class="session session--simone-seely">
+							<div class="session_vr">
+								<div class="photo-themes">
+									<span class="teen-party"></span>
+									<span class="cotton-candy"></span>
+									<span class="sunset"></span>
+									<span class="mist"></span>
+								</div>
+							</div>
+							<section class="session_content">
+								<i>Creative</i>
+								<h4>
+									<small>Simone Seely</small>
+									Performance 
+								</h4>
+								<p>
+									Simone Seely is a classically trained, bi-lingual violinist who is also at 
+									home playing Celtic, Americana, and orchestral music. 
+									She has won the official Florida State Fiddle Contest as well as numerous other 
+									awards -including the State concerto competition and the regional 
+									Long Leaf Pine Fiddle Contest. 
+								</p>
+								<p>
+									As a two time Future Music Makers scholarship recipient, she is excited to 
+									share her musical expressions with the BarCamp community and beyond. 
+									When she is not making music, she enjoys video editing, 
+									cooking her favorite recipes, and taking care of her pets.
+								</p>
+								<a href="https://www.facebook.com/SimoneSeely/" target="_blank">facebook.com/SimoneSeely</a>
+							</section>
+						</div> 
+						<div class="session session--sebastian-ellios">
+								<div class="session_vr">
+									<div class="photo-themes">
+										<span class="teen-party"></span>
+										<span class="cotton-candy"></span>
+										<span class="sunset"></span>
+										<span class="mist"></span>
+									</div>
+								</div>
+								<section class="session_content">
+									<i>Creative</i>
+									<h4>
+										<small>Sebastian Ellios</small>
+										Live Music in Community Building 
+									</h4>
+									<p>
+										Gainesville offers its residents an incredible opportunity 
+										to engage in live music and strengthen bonds with each other. 
+										This talk expands on how music is integral to our city and how 
+										individuals can partake in this form of art.
+									</p>
+									<a href="https://www.facebook.com/sebastianellios" target="_blank">facebook.com/sebastianellios</a>
+								</section>
+							</div> 
+					</div>
+					<!-- Right -->
+					<div class="column">
+						<div class="session">
+							<div class="session_vr">
+								<div class="photo-themes">
+									<span class="teen-party"></span>
+									<span class="cotton-candy"></span>
+									<span class="sunset"></span>
+									<span class="mist"></span>
+								</div>
+							</div>
+							<section class="session_content">
+								<i>Kitchen Sink</i>
+								<h4>
+									<small>Angela Pang</small>
+									Effective Altruism 
+								</h4>
+								<p>
+									How do we do the most good? An introduction to Effective 
+									Altruism gives us guidelines on choosing careers, charities, 
+									and more. 
+								</p>
+							</section>
+						</div> 
+						<div class="session session--amie-kreppel">
+								<div class="session_vr">
+									<div class="photo-themes">
+										<span class="teen-party"></span>
+										<span class="cotton-candy"></span>
+										<span class="sunset"></span>
+										<span class="mist"></span>
+									</div>
+								</div>
+								<section class="session_content">
+									<i>Entrepreneur</i>
+									<h4>
+										<small>Amie Kreppel</small>
+										What is GDPR and why it matters
+									</h4>
+									<p>
+										The General Data Protection Regulation (GDPR) of the 
+										European Union (EU) is an initiative of the EU to 
+										ensure a high level of data protection and privacy for 
+										all individuals within the EU (and European Economic Area-EEA), 
+										including the exportation of all personal data outside of the EU and EEA. 
+									</p>
+									<p>
+										The introduction of the GDPR constraints have had a profound 
+										impact on the collection and potential use of personal data 
+										central to many online business models including a 22% drop 
+										in the use of 3rd party cookies across Europe and an increase 
+										in the difficulty of targeting audiences using 3rd party data.
+									</p>
+									<p>
+										Since GDPR applies to any activity that would collect EU and 
+										EEA citizen data within and beyond EU/EEA borders it is 
+										extremely relevant to online industries worldwide, with a 
+										particularly large effect on smaller players. 
+									</p>
+									<a href="https://twitter.com/akreppel" target="_blank">@akreppel</a>
+								</section>
+						</div> 
+					</div>
+				</div>
       </div>
       <div class="our-sponsors">
         <h2>Sponsors</h2>
