--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,11 +1,12 @@
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
 	margin: 0 0 $base-unit*2 0;
 	line-height: 1.2;
-  font-weight: 300;
-  font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -17,8 +18,18 @@ h2 {
 	font-size: 3.2rem;
 }
 
+h3 {
+	font-size: 2.4rem;
+}
+
+h4 {	
+	font-size: 2.0rem;
+}
+
+
 p  {
 	font-size: 2.4rem;
 	font-weight: 300;
-  font-family: 'Roboto', sans-serif;	
+	font-family: 'Roboto', sans-serif;	
+	line-height: 1.25;
 }
