--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -127,7 +127,7 @@
         </p>
         <p>
           As an ice breaker, we’ll seed the schedule with 5 - 10 featured
-          sessions, just to get the ball rolling. Intrested in being a
+          sessions, just to get the ball rolling. Interested in being a
           featured speaker? <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447">Register</a> and select, speaker ticket.
         </p>
       </div>
