Added OPIE software to sponsor list.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -882,6 +882,11 @@ Our Sponsors
         height: auto;
       }
 
+      img.tall {
+        height: 200px;
+        width: auto;
+      }
+
     }
   
   }
