--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -584,6 +584,11 @@
             </a>
           </li>
           <li>
+            <a href="https://opiesoftware.com/" target="_blank">
+              <img src="assets/images/opie-logo.png" alt="OPIE Software" class="tall">
+            </a>
+          </li>
+          <li>
             <a href="https://startupgnv.com/" target="_blank">
               <img src="assets/images/startup-GNV-logo.png" alt="startupGNV">
             </a>
