--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -227,7 +227,7 @@
                 <br>
                 <br>
                 You can email us at <a href="mailto:gainesvillebarcamp@gmail.com">gainesvillebarcamp@gmail.com</a>.
-                You can also tweet us at <a href="https://twitter.com/GNVBarCamp" target="_blank">@GNVBarCamp</a>.</p>
+                You can also tweet us at <a href="https://twitter.com/BarCampGNV" target="_blank">@BarCampGNV</a>.</p>
               </p>
             </li>
           </ul>
