Added Aaron Feickert: Cryptography and security Q&A session.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -821,6 +821,12 @@ Our Sessions
       background-position: -50px 0;
     }
 
+    &--aaron-feickert .session_vr {
+      background: barcamp-color('specter') url(../images/aaron-feickert.jpg) no-repeat;
+      background-size: cover;
+      background-position: -80px 0;
+    }
+
 
   }
 
