--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -494,7 +494,7 @@
 									</p>
 									<a href="https://www.facebook.com/sebastianellios" target="_blank">facebook.com/sebastianellios</a>
 								</section>
-							</div> 
+						</div> 
 					</div>
 					<!-- Right -->
 					<div class="column">
@@ -557,7 +557,33 @@
 									</p>
 									<a href="https://twitter.com/akreppel" target="_blank">@akreppel</a>
 								</section>
-						</div> 
+            </div> 
+            <div class="session session--aaron-feickert">
+              <div class="session_vr">
+                <div class="photo-themes">
+                  <span class="teen-party"></span>
+                  <span class="cotton-candy"></span>
+                  <span class="sunset"></span>
+                  <span class="mist"></span>
+                </div>
+              </div>
+              <section class="session_content">
+                <i>Technology</i>
+                <h4>
+                  <small>Aaron Feickert</small>
+                  Cryptography and security Q&A
+                </h4>
+                <p>
+                  We all interact with cryptography every day. 
+                  Whether it's making a phone call, using apps on a tablet, 
+                  using wireless earbuds, or transferring cryptocurrency, 
+                  modern security hinges on math that most of us don't think about. 
+                  How does cryptography get used in real-world scenarios? 
+                  And how does it go wrong? This talk will be very informal and audience-driven, 
+                  based on interest.
+                </p>
+              </section>
+          </div> 
 					</div>
 				</div>
       </div>
