--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -494,7 +494,35 @@
 									</p>
 									<a href="https://www.facebook.com/sebastianellios" target="_blank">facebook.com/sebastianellios</a>
 								</section>
-						</div> 
+            </div>
+            <div class="session session--usha-suryadevara">
+              <div class="session_vr">
+                <div class="photo-themes">
+                  <span class="teen-party"></span>
+                  <span class="cotton-candy"></span>
+                  <span class="sunset"></span>
+                  <span class="mist"></span>
+                </div>
+              </div>
+              <section class="session_content">
+                <i>Technology</i>
+                <h4>
+                  <small>Usha Suryadevara</small>
+                  A year into Serverless Architecture - Lessons learned.
+                </h4>
+                <p>
+                  Serverless will surely take over in the next few years. 
+                  What about now? Is serverless really a step forward? 
+                  The serverless ecosystem is evolving constantly, which 
+                  means our architecture needs to evolve constantly. 
+                  We've learned valuable lessons developing functions 
+                  for AWS, and we are still iterating. Come find out 
+                  why the initial struggles were worth the journey in 
+                  this session. 
+                </p>
+                <a href="https://twitter.com/srusha" target="_blank">@srusha</a>
+              </section>
+            </div>  
 					</div>
 					<!-- Right -->
 					<div class="column">
