Added Duncan Kabinu session.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -833,6 +833,11 @@ Our Sessions
       background-position: center;
     }
 
+    &--duncan-kabinu .session_vr {
+      background: barcamp-color('specter') url(../images/duncan-kabinu.jpg) no-repeat;
+      background-size: cover;
+      background-position: center;
+    }
 
   }
 
