--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -547,7 +547,37 @@
 									and more. 
 								</p>
 							</section>
-						</div> 
+            </div> 
+            <div class="session session--duncan-kabinu">
+							<div class="session_vr">
+								<div class="photo-themes">
+									<span class="teen-party"></span>
+									<span class="cotton-candy"></span>
+									<span class="sunset"></span>
+									<span class="mist"></span>
+								</div>
+							</div>
+							<section class="session_content">
+								<i>Entrepreneur</i>
+								<h4>
+									<small>Duncan Kabinu</small>
+									The Dangers of Outsourcing Software Development 
+								</h4>
+								<p>
+                  An outsourcing relationship is hard…but you want to make 
+                  it successful and cost effective. There are several reasons
+                  to outsource your app development project - cost reduction, 
+                  innovation, accelerate production, better products. 
+                  Well there are common risks that can become costly, 
+                  so how do you manage them?  Come learn about the good and 
+                  the bad and get your Outsourcing Best Practices Toolkit. 
+                </p>
+                <p>
+                  NOTE: Outsourcing for this context is to any company/person 
+                  that is not your direct employee or member of staff.
+                </p>
+							</section>
+						</div>
 						<div class="session session--amie-kreppel">
 								<div class="session_vr">
 									<div class="photo-themes">
