--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -414,6 +414,33 @@
 				<div class="row">
 					<!-- Left -->
 					<div class="column">
+            <div class="session session--mark-oelke">
+                <div class="session_vr">
+                  <div class="photo-themes">
+                    <span class="teen-party"></span>
+                    <span class="cotton-candy"></span>
+                    <span class="sunset"></span>
+                    <span class="mist"></span>
+                  </div>
+                </div>
+                <section class="session_content">
+                  <i>Technology</i>
+                  <h4>
+                    <small>Mark Oelke</small>
+                    Dynamic Integration Testing with Selenium and Jupyter Notebooks 
+                  </h4>
+                  <p>
+                    Have you ever wanted to modify an integration test while running the test? 
+                    What if your "Day in the Life" test could also test behavior? 
+                    Or do you just want an introduction in Integration testing? 
+                  </p>
+                  <p>
+                    This talk will take you through demos to build a scaffold for testing in 
+                    Jupyter Notebooks and Test your knowledge will live quizzes. 
+                    Feel free to bring your laptop, checkout the code, and follow along.
+                  </p>
+                </section>
+            </div>
 						<div class="session session--michelle-brownstein">
 							<div class="session_vr">
 								<div class="photo-themes">
@@ -577,7 +604,30 @@
                   that is not your direct employee or member of staff.
                 </p>
 							</section>
-						</div>
+            </div>
+            <div class="session session--justin-doan">
+                <div class="session_vr">
+                  <div class="photo-themes">
+                    <span class="teen-party"></span>
+                    <span class="cotton-candy"></span>
+                    <span class="sunset"></span>
+                    <span class="mist"></span>
+                  </div>
+                </div>
+                <section class="session_content">
+                  <i>Kitchen Sink/Technology</i>
+                  <h4>
+                    <small>Justin Doan</small>
+                    Transitioning into a tech career
+                  </h4>
+                  <p>
+                    Finding yourself dreaming of new things? Follow me on my journey from 
+                    accountant to software developer, where I'll go over the whats, whys, and 
+                    hows of some of the key steps in the process.
+                  </p>
+                  <a href="https://twitter.com/AxeEffect3890" target="_blank">@AxeEffect3890</a>
+                </section>
+            </div>
 						<div class="session session--amie-kreppel">
 								<div class="session_vr">
 									<div class="photo-themes">
