Added sold out message.

--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -54,13 +54,10 @@
           as we celebrate five years of knowledge sharing,
           community building, and networking.
         </p>
-        <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447" class="btn" target="_blank">
-          Register now
-        </a>
-        <small>
-          BarCamp is FREE to attend, but your RSVP is really important
-          so we can purchase enough food and t-shirts!
-        </small>
+        <p>
+          Sorry, BarCamp GNV 2019 is <br>
+          <b>Sold out</b>.
+        </p>
         <div class="photo--hero">
           <div class="photo-themes">
             <span class="teen-party"></span>
